# resource-system

./: CMakeLists.txt  README.md
src/resource-system/: Node.cc  Node.hh  System.cc  System.hh  define.hh  error.cc  error.hh  file.cc  file.hh  fwd.hh  handle.hh  meta.hh  node.cc  node.hh  res.hh  result.hh  tags.hh
src/resource-system/base/: api.cc  api.hh  comp_result.hh  hash.cc  hash.hh
src/resource-system/detail/: hash_helper.hh  internal_define.hh  log.cc  log.hh  resource.hh  resource_slot.hh
src/resource-system/persistence/: simple.cc  simple.hh
tests/: CMakeLists.txt  api.cc  basics.cc  files.cc  main.cc  viewer-demo.cc
